--- a/dist.ini
+++ b/dist.ini
@@ -34,7 +34,7 @@ bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Test-Naive
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
 spell_cmd = aspell list
-stopwords = foo
+stopwords = instantiation
 
 [Prereqs]
 Moo = 2
