--- a/dist.ini
+++ b/dist.ini
@@ -35,6 +35,8 @@ bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Test-Naive
 wordlist = Pod::Wordlist
 spell_cmd = aspell list
 stopwords = instantiation
+stopwords = DBOOK
+stopwords = MSTROUT
 
 [Prereqs]
 Moo = 2
